Update RedescriptionsRepository.java + controller fix